--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-share": "^4.4.0",
     "react-tag-autocomplete": "^6.1.0",
     "reactstrap": "^8.9.0",
+    "recharts": "^2.0.9",
     "sass-loader": "^10.2.0",
     "serve": "^12.0.0",
     "styled-components": "^5.3.0",
