--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^8.6.8",
     "formik": "^2.2.9",
     "got": "^11.8.2",
+    "htmlparser2": "^6.1.0",
     "imgbb-uploader": "^1.3.2",
     "jquery": "^3.6.0",
     "loader-runner": "^2.4.0",
